Lib updates to fix vulnerabilities. Fix: Table wdith jumps sometimes, when editor opens Fix: Click on CellEditor Arrow does not open popup Fix: Html Editor has no surrounding focus rect Fix: Escape does not revert to original value in all editors Fix: First Character in table does not replace the text in all editors Fix: Tab and enter order does not work on HtmlEditor (hidden elements get the focus) Fix: table does not scroll to the new selected column on tab or left right keys

--- a/src/application-frame/styling/color-schemes/dark.scss
+++ b/src/application-frame/styling/color-schemes/dark.scss
@@ -1014,6 +1014,23 @@ body {
     }
 }
 
+/// Html editor wrapper
+.rc-editor-html {
+    background: var(--input-background);
+    border: var(--input-border-width) solid var(--input-border-color);
+    border-radius: var(--editor-border-radius);
+
+    &:focus-within {
+        box-shadow: var(--focus-box-shadow);
+        border-color: var(--input-border-hover-color) !important;
+        outline: none;
+    }
+
+    &:hover {
+        border-color: var(--input-border-hover-color);
+    }
+}
+
 .p-float-label > label {
     color: var(--input-placeholder-color);
 }
@@ -1184,7 +1201,7 @@ body {
                         }
                     }
 
-                    &.ql-source {
+                    &.custom-source {
                         svg path {
                             fill: var(--html-toolbar-button-background);
                         }
